--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ wp-config.php
 /app/public/wp-content/uploads/
 # Log files
 *.log
-*/node_modules
+node_modules
 # htaccess
 *.htaccess
 # DS_Store
