--- a/app/public/wp-content/themes/portfolio-theme/package.json
+++ b/app/public/wp-content/themes/portfolio-theme/package.json
@@ -12,6 +12,14 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@babel/register": "^7.23.7",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-if": "^3.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "sass": "^1.70.0"
+  },
+  "dependencies": {
+    "yargs": "^17.1.1-candidate.0"
   }
 }
