--- a/app/public/wp-content/themes/portfolio-theme/package.json
+++ b/app/public/wp-content/themes/portfolio-theme/package.json
@@ -1,25 +1,31 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
+  "directories": {
+  "lib": "lib"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp",
+    "build": "gulp build --prod"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/register": "^7.23.7",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/register": "^7.18.9",
+    "@types/yargs": "^17.0.10",
+    "del": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "sass": "^1.70.0"
-  },
-  "dependencies": {
-    "yargs": "^17.1.1-candidate.0"
+    "sass": "^1.54.0",
+    "yargs": "^17.5.1"
   }
 }
