--- a/app/public/wp-content/themes/portfolio-theme/package.json
+++ b/app/public/wp-content/themes/portfolio-theme/package.json
@@ -5,19 +5,21 @@
   "description": "",
   "main": "index.js",
   "directories": {
-  "lib": "lib"
+    "lib": "lib"
   },
   "scripts": {
     "start": "gulp",
-    "build": "gulp build --prod"
+    "build": "gulp build --prod",
+    "bundle": "gulp bundle --prod --experimental-json-modules"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-env": "^7.23.9",
     "@babel/register": "^7.18.9",
     "@types/yargs": "^17.0.10",
+    "babel-loader": "^9.1.3",
     "del": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
@@ -25,7 +27,16 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^6.0.0",
     "sass": "^1.54.0",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^7.0.0",
     "yargs": "^17.5.1"
+  },
+  "dependencies": {
+    "browser-sync": "^3.0.2",
+    "gulp-replace": "^1.1.4",
+    "jquery": "^3.7.1"
   }
 }
