--- a/app/public/wp-content/themes/portfolio/package.json
+++ b/app/public/wp-content/themes/portfolio/package.json
@@ -20,23 +20,26 @@
     "@babel/register": "^7.18.9",
     "@types/yargs": "^17.0.10",
     "babel-loader": "^9.1.3",
+    "browser-sync": "^3.0.2",
     "del": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "^9.0.0",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "gulp-zip": "^6.0.0",
-    "sass": "^1.54.0",
+    "gulp-zip": "^4.2.0",
+    "sass": "^1.43.4",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^7.0.0",
     "yargs": "^17.5.1"
   },
   "dependencies": {
-    "browser-sync": "^3.0.2",
-    "gulp-replace": "^1.1.4",
-    "jquery": "^3.7.1"
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "jquery": "^3.5.1",
+    "normalize.css": "^8.0.1",
+    "slick-carousel": "^1.8.1"
   }
 }
