--- a/app/public/wp-content/plugins/_themename-metaboxes/package.json
+++ b/app/public/wp-content/plugins/_themename-metaboxes/package.json
@@ -27,6 +27,7 @@
         "gulp-clean-css": "^4.3.0",
         "gulp-if": "^3.0.0",
         "gulp-imagemin": "^9.0.0",
+        "gulp-rename": "^2.0.0",
         "gulp-replace": "^1.1.4",
         "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^2.6.5",
@@ -36,5 +37,5 @@
         "vinyl-named": "^1.1.0",
         "webpack-stream": "^7.0.0",
         "yargs": "^17.5.1"
-      }
+    }
 }
