--- a/app/public/wp-content/plugins/_themename-shortcodes/package.json
+++ b/app/public/wp-content/plugins/_themename-shortcodes/package.json
@@ -37,5 +37,8 @@
         "vinyl-named": "^1.1.0",
         "webpack-stream": "^7.0.0",
         "yargs": "^17.5.1"
+    },
+    "dependencies": {
+        "slick-carousel": "^1.8.1"
     }
 }
