--- a/app/public/wp-content/themes/portfolio/package.json
+++ b/app/public/wp-content/themes/portfolio/package.json
@@ -26,6 +26,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^9.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^2.6.5",
