--- a/app/public/wp-content/themes/portfolio/package.json
+++ b/app/public/wp-content/themes/portfolio/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
